# progetto_tesi

./: .gitignore  README.MD  project.sh
rust_benchmark/: Cargo.toml
rust_benchmark/src/: main.rs  wasm3_mod.rs  wasmedge_mod.rs  wasmer_mod.rs  wasmtime_mod.rs
rust_benchmark/wasm3/: Cargo.toml
rust_benchmark/wasm3/src/: main.rs
rust_benchmark/wasmedge/: Cargo.toml
rust_benchmark/wasmedge/src/: main.rs
rust_benchmark/wasmer/: Cargo.toml
rust_benchmark/wasmer/src/: main.rs
rust_benchmark/wasmtime/: Cargo.toml
rust_benchmark/wasmtime/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
